--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loading-screen": "0.0.17",
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1"
   },
