--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "npm run build && npm run serve",
+    "start": "node proxy_server.js",
+    "heroku-postbuild": "npm install && npm run build",
+    "dev": "npm run build && npm run serve",
     "frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
