--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "nodemon -i ./build -i ./src node proxy_server.js"
+    "serve": "nodemon -i ./build -i ./src node local_server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
